--- a/app/src/main/res/layout/fragment_events_list.xml
+++ b/app/src/main/res/layout/fragment_events_list.xml
@@ -2,10 +2,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/eventsListFrame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EventsListFragment"
-    android:background="@color/purple_200">
+    android:background="@color/background"
+    tools:context=".EventsListFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,21 +16,21 @@
             android:id="@+id/buttonHome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/purple_500"
+            android:backgroundTint="@color/txtBackground"
             android:text="@string/text_home"
             android:textColor="@color/white"
             android:typeface="monospace"
-            app:layout_constraintBottom_toTopOf="@+id/buttonNewEvent"
+            app:layout_constraintBottom_toTopOf="@+id/buttonEventsList"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="TextContrastCheck" />
 
         <Button
-            android:id="@+id/buttonNewEvent"
+            android:id="@+id/buttonEventsList"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="60dp"
-            android:backgroundTint="@color/purple_500"
+            android:backgroundTint="@color/txtBackground"
             android:text="@string/text_plan_event"
             android:textColor="@color/white"
             android:typeface="monospace"
@@ -39,16 +40,16 @@
             tools:ignore="TextContrastCheck" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="409dp"
+            android:id="@+id/recyclerViewEvents"
+            android:layout_width="320dp"
             android:layout_height="0dp"
-            android:layout_marginBottom="1dp"
             app:layout_constraintBottom_toTopOf="@+id/buttonHome"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewEventName" />
+            app:layout_constraintTop_toBottomOf="@+id/EventName" />
 
         <TextView
-            android:id="@+id/textViewEventName"
+            android:id="@+id/EventName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/round_shape"
