--- a/app/src/main/res/drawable/round_shape.xml
+++ b/app/src/main/res/drawable/round_shape.xml
@@ -5,10 +5,6 @@
 
         <corners android:radius="10dp" />
 
-        <!-- This is the border color -->
-        <stroke android:width="2dp" android:color="@color/purple_500" />
-
-        <!--- This is the background color -->
-        <solid android:color="@color/purple_500"/>
+        <solid android:color="@color/txtBackground"/>
 
     </shape>
