--- a/app/src/main/res/layout/event_recycler_item.xml
+++ b/app/src/main/res/layout/event_recycler_item.xml
@@ -1,6 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/EventName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/textview"
+        android:textAlignment="textStart"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/imageButtonTest"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/EventHost"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/textview"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@+id/EventName"
+        app:layout_constraintStart_toStartOf="@+id/EventName"
+        app:layout_constraintTop_toBottomOf="@+id/EventName" />
+
+    <ImageButton
+        android:id="@+id/imageButtonDelete"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:background="#00FFFFFF"
+        android:contentDescription="@string/image_delete"
+        app:layout_constraintBottom_toBottomOf="@+id/EventPlace"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/EventName"
+        app:srcCompat="@drawable/ic_baseline_delete_24"
+        tools:ignore="ImageContrastCheck" />
+
+    <TextView
+        android:id="@+id/EventPlace"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/textview"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@+id/EventHost"
+        app:layout_constraintStart_toStartOf="@+id/EventHost"
+        app:layout_constraintTop_toBottomOf="@+id/EventHost" />
+
+    <ImageButton
+        android:id="@+id/imageButtonTest"
+        android:layout_width="48dp"
+        android:layout_height="0dp"
+        android:background="#00FFFFFF"
+        android:contentDescription="@string/image_edit"
+        app:layout_constraintBottom_toBottomOf="@+id/imageButtonDelete"
+        app:layout_constraintEnd_toStartOf="@+id/imageButtonDelete"
+        app:layout_constraintTop_toTopOf="@+id/imageButtonDelete"
+        app:srcCompat="@drawable/oval_shape"
+        tools:ignore="ImageContrastCheck" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
