--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -2,10 +2,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/eventFrame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EventFragment"
-    android:background="@color/background">
+    android:background="@color/background"
+    tools:context=".EventFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -21,8 +22,10 @@
             android:typeface="monospace"
             app:layout_constraintBottom_toTopOf="@+id/buttonEventsList"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.507"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageButtonEditPlace"
+            app:layout_constraintVertical_bias="1.0"
             tools:ignore="TextContrastCheck" />
 
         <Button
@@ -51,6 +54,7 @@
             android:textSize="40sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="TextContrastCheck" />
@@ -59,89 +63,66 @@
             android:id="@+id/imageButtonChecklist"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            android:layout_marginStart="100dp"
             android:background="@drawable/oval_shape"
             android:contentDescription="@string/image_checklist"
             android:src="@drawable/ic_baseline_checklist_24"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageButtonGuestlist"
+            app:layout_constraintStart_toEndOf="@+id/imageButtonEditPlace"
+            app:layout_constraintTop_toBottomOf="@+id/textViewAddress"
             tools:ignore="ImageContrastCheck" />
 
         <ImageButton
             android:id="@+id/imageButtonGuestlist"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            android:layout_marginTop="32dp"
             android:background="@drawable/oval_shape"
             android:contentDescription="@string/image_guestlist"
             android:src="@drawable/ic_baseline_person_24"
-            app:layout_constraintEnd_toStartOf="@+id/imageButtonEditEvent"
-            app:layout_constraintStart_toEndOf="@+id/imageButtonChecklist"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            tools:ignore="ImageContrastCheck" />
-
-        <ImageButton
-            android:id="@+id/imageButtonEditEvent"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_marginEnd="100dp"
-            android:background="@drawable/oval_shape"
-            android:contentDescription="@string/image_edit"
-            android:src="@drawable/ic_baseline_edit_white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageButtonGuestlist"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewAddress"
             tools:ignore="ImageContrastCheck" />
 
         <ImageButton
             android:id="@+id/imageButtonEditPlace"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            android:layout_marginTop="72dp"
             android:background="@drawable/oval_shape"
             android:contentDescription="@string/image_location"
             android:src="@drawable/ic_baseline_place_24"
-            app:layout_constraintEnd_toStartOf="@+id/imageButtonEditEvent"
-            app:layout_constraintStart_toEndOf="@+id/imageButtonChecklist"
-            app:layout_constraintTop_toBottomOf="@+id/imageButtonGuestlist"
+            app:layout_constraintStart_toEndOf="@+id/imageButtonGuestlist"
+            app:layout_constraintTop_toBottomOf="@+id/textViewAddress"
             tools:ignore="ImageContrastCheck" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/textViewAddress"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="92dp"
-            android:orientation="vertical"
+            android:text="TextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewEventTitle">
+            app:layout_constraintTop_toBottomOf="@+id/textViewTime" />
 
-            <TextView
-                android:id="@+id/textViewDate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/text_date"
-                android:textAlignment="center"
-                android:textSize="34sp"
-                tools:layout_editor_absoluteY="186dp" />
+        <TextView
+            android:id="@+id/textViewDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/text_date"
+            android:textAlignment="center"
+            android:textSize="34sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewEventTitle" />
 
-            <TextView
-                android:id="@+id/textViewTime"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="@string/text_time"
-                android:textAlignment="center"
-                android:textSize="34sp" />
-
-            <TextView
-                android:id="@+id/EventPlace"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/text_location"
-                android:textAlignment="center"
-                android:textSize="24sp" />
-        </LinearLayout>
-
+        <TextView
+            android:id="@+id/textViewTime"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="@string/text_time"
+            android:textAlignment="center"
+            android:textSize="34sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewDate" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
