--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,7 +34,7 @@
 
 
         <Button
-            android:id="@+id/buttonEvents"
+            android:id="@+id/buttonEvent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/txtBackground"
